--- a/meson.build
+++ b/meson.build
@@ -1,4 +1,26 @@
 project('net.bugabinga.eos.FileIntegrity', 'vala', 'c')
+
+i18n = import('i18n')
+add_global_arguments('-DGETTEXT_PACKAGE=@0@'.format(meson.project_name()), language:'c')
+
+i18n.merge_file(
+    input: join_paths('data', meson.project_name()+'.desktop.in'),
+    output: meson.project_name()+'.desktop',
+    po_dir: join_paths(meson.source_root(),'po'),
+    type: 'desktop',
+    install: true,
+    install_dir: join_paths(get_option('datadir'),'applications')
+)
+i18n.merge_file(
+    input: join_paths('data', meson.project_name()+'.appdata.xml.in'),
+    output: meson.project_name()+'.appdata.xml',
+    po_dir: join_paths(meson.source_root(),'po'),
+    type: 'desktop',
+    install: true,
+    install_dir: join_paths(get_option('datadir'),'metainfo')
+)
+subdir('po')
+
 executable(
     meson.project_name(),
     'src/FileIntegrity.vala',
@@ -7,12 +29,3 @@ executable(
     ],
     install: true
 )
-install_data(
-    join_paths('data', meson.project_name()+'.desktop'),
-    install_dir: join_paths(get_option('datadir'),'applications')
-)
-install_data(
-    join_paths('data', meson.project_name()+'.appdata.xml'),
-    install_dir: join_paths(get_option('datadir'),'metainfo')
-)
-
